--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 </head>
 
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <form id="form">
+            <input id="input"> </input>
+            <button id="btn" type="submit">Add Task</button>
+        </form>
+    </div>
 
     <script src="src/index.js">
     </script>
 </body>
 
-</html>
+</html> 
